--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Netflix_Clone</title>
-        <link rel="stylesheet" href="Netflix.css"
+        <link rel="stylesheet" href="style.css"
     </head>
 
 
